<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_atools_locationQuery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_query"
        android:textSize="25sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置手机归属地服务"
            android:textSize="25sp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dip" />

        <CheckBox
            android:id="@+id/cb_atools_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
        
    </RelativeLayout>
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />
	
     <TextView
        android:id="@+id/tv_atools_locationShow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_show_style"
        android:textSize="25sp" />
     
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />
	
     <TextView
        android:id="@+id/tv_atools_locationPosition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_show_position"
        android:textSize="25sp" />
     
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />
	
     <TextView
        android:id="@+id/tv_atools_smsBackup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_backup"
        android:textSize="25sp" />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />
	
     <TextView
        android:id="@+id/tv_atools_smsRestore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_reStore"
        android:textSize="25sp" />
     
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_atools_app_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="程序锁"
        android:textSize="25sp" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_atools_common_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="常用电话号码"
        android:textSize="25sp" />
    
</LinearLayout>