<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/text_title_style"
        android:text="2.手机卡绑定" />

    <ImageView style="@style/devide_line_style" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginTop="8dip"
        android:text="每次开机发现SIM变更自动发送报警短信" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        >
        <Button 
            android:id="@+id/btn_setup2_bind"
            android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/bind"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="绑定状态"
            android:checked="false"
            android:clickable="false"
            android:id="@+id/ck_setup2_bind"
           ></CheckBox>
        
    </LinearLayout>
        

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <ImageView style="@style/image_status_off_style" />

        <ImageView style="@style/image_status_on_style" />

        

        <ImageView style="@style/image_status_off_style" />

        <ImageView style="@style/image_status_off_style" />
    </LinearLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_marginTop="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bind" />
        </LinearLayout>
		
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_setup2_previous"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/previous"
            android:text="@string/previous_step" />
        
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_setup2_next"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="@string/next_step" />
    </RelativeLayout>
</LinearLayout>